# Triangles

./: .clang-format  CMakeLists.txt  README.md
include/: double_comparison.hpp  line.h  line.hpp  plane.hpp  point.hpp  vector.hpp
src/: CMakeLists.txt  double_comparison.cpp  line.cpp  plane.cpp  point.cpp  vector.cpp
test/: CMakeLists.txt  line_test.cpp  plane_test.cpp  test_vector.cpp
test/basic_tests/: line_test.cpp  main.cpp  plane_test.cpp  test_double_comparison.cpp  test_vector.cpp
